--- a/Radial diffusion of calcium.html
+++ b/Radial diffusion of calcium.html
@@ -11907,7 +11907,8 @@ div#notebook {
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Next we define 'Who' the calcium that is diffusing. Because multicompartment reactions are specified in moleques/$\mu$m$^2$/ms we need to scale the diffusion coefficient used in the reactions.</p>
+<p>Next we define 'Who' the calcium that is diffusing. Because multicompartment reactions are specified in moleques/$\mu$m$^2$/ms we need to scale the diffusion coefficient used in the reactions.
+We start the simulation with the a high concentration (1$\mu$M) in the middle of the dendrite on the outer shell.</p>
 
 </div>
 </div>
