--- a/Radial diffusion of calcium.html
+++ b/Radial diffusion of calcium.html
@@ -12057,6 +12057,15 @@ We start the simulation with the a high concentration (1$\mu$M) in the middle of
 </div>
 
 </div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div>
+<div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
+<p>The heatmap shows the concentration of calcium (in nM) along the length of the dendrite (x-axis) and across the radial shells (y-axis) after 2.5ms. The second plot shows the concentration in each of the shells over the whole length of the neuron (were the soma connects to the dendrite at x=0).</p>
+
+</div>
+</div>
+</div>
     </div>
   </div>
 </body>
