--- a/Radial diffusion of calcium.html
+++ b/Radial diffusion of calcium.html
@@ -12061,7 +12061,7 @@ We start the simulation with the a high concentration (1$\mu$M) in the middle of
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The heatmap shows the concentration of calcium (in nM) along the length of the dendrite (x-axis) and across the radial shells (y-axis) after 2.5ms. The second plot shows the concentration in each of the shells over the whole length of the neuron (were the soma connects to the dendrite at x=0).</p>
+<p>The heatmap shows the concentration of calcium (in nM) along the length of the dendrite (x-axis) and across the radial shells (y-axis) after 2.5ms. The second plot shows the concentration in each of the shells over the whole length of the neuron (the soma connects to the dendrite at x=0).</p>
 
 </div>
 </div>
